LPS-47243 Prevents mobile site selector link from shifting position after tap

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom_responsive.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom_responsive.css
@@ -87,6 +87,10 @@
 								position: absolute;
 								right: 0;
 							}
+
+							.dropdown-toggle {
+								padding-top: 0;
+							}
 						}
 
 						.divider {
